
[TestGetCommand/shows_only_the_marked_windows - 1]
[]struct { WindowID int "json:\"window_id\""; Mark string "json:\"mark\"" }{
    {WindowID:1, Mark:"mark1"},
}
[]aerospace.Window{
    {WindowID:1, WindowTitle:"title1", AppName:"app1", AppBundleID:"", Workspace:""},
    {WindowID:2, WindowTitle:"title2", AppName:"app2", AppBundleID:"", Workspace:""},
    {WindowID:3, WindowTitle:"title3", AppName:"app3", AppBundleID:"", Workspace:""},
}
aerospace-marks get mark1

1 | app1 | title1
---

[TestGetCommand/shows_only_the_marked_windows_id - 1]
[]struct { WindowID int "json:\"window_id\""; Mark string "json:\"mark\"" }{
    {WindowID:1, Mark:"mark1"},
}
[]aerospace.Window{
    {WindowID:1, WindowTitle:"title1", AppName:"app1", AppBundleID:"", Workspace:""},
    {WindowID:2, WindowTitle:"title2", AppName:"app2", AppBundleID:"", Workspace:""},
    {WindowID:3, WindowTitle:"title3", AppName:"app3", AppBundleID:"", Workspace:""},
}
aerospace-marks get mark1 --window-id

1
---

[TestGetCommand/shows_only_the_marked_windows_app-name - 1]
[]struct { WindowID int "json:\"window_id\""; Mark string "json:\"mark\"" }{
    {WindowID:1, Mark:"mark1"},
}
[]aerospace.Window{
    {WindowID:1, WindowTitle:"title1", AppName:"app1", AppBundleID:"", Workspace:""},
    {WindowID:2, WindowTitle:"title2", AppName:"app2", AppBundleID:"", Workspace:""},
    {WindowID:3, WindowTitle:"title3", AppName:"app3", AppBundleID:"", Workspace:""},
}
aerospace-marks get mark1 -a

app1
---

[TestGetCommand/shows_only_the_marked_windows_app-bundle-id - 1]
[]struct { WindowID int "json:\"window_id\""; Mark string "json:\"mark\"" }{
    {WindowID:1, Mark:"mark1"},
}
[]aerospace.Window{
    {WindowID:1, WindowTitle:"title1", AppName:"app1", AppBundleID:"bundle1", Workspace:""},
    {WindowID:2, WindowTitle:"title2", AppName:"app2", AppBundleID:"bundle2", Workspace:""},
    {WindowID:3, WindowTitle:"title3", AppName:"app3", AppBundleID:"bundle3", Workspace:""},
}
aerospace-marks get mark1 --app-bundle-id

bundle1
---
